# blog

./: .gitignore  README.md
.claude/: launch.json
.claude/agents/: feature-builder.md
audio-notes/codex-first-impressions/: manifest.json  notes.md
audio-notes/cowork-blog-automation/: manifest.json  notes.md
editor/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
editor/server/: index.ts  utils.ts  watcher.ts
editor/src/: App.tsx  index.css
jkerschner.com/: hugo.toml
jkerschner.com/content/: contact.md
jlkerschner.com/: hugo.toml
pipeline/: .env.example  Makefile  README.md  package-lock.json  package.json
pipeline/docs/: apple-shortcut-setup.md  collect-stage.md  (+1 more)
project-tab/: .claudeignore  .gitignore  PHASE3-ROADMAP.md  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
project-tab/adapter-shim/openai/: README.md  pyproject.toml
project-tab/adapter-shim/openai/adapter_shim/: __init__.py  __main__.py  app.py  artifact_upload.py  brief_to_prompt.py  codex_runner.py  event_mapper.py  events.py  mock_runner.py  models.py
project-tab/adapter-shim/openai/adapter_shim_openai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project-tab/adapter-shim/openai/tests/: conftest.py  test_artifact_upload.py  test_brief_to_prompt.py  test_codex_runner.py  test_endpoints.py  test_event_mapper.py  test_events.py  test_mock_runner.py  test_models.py  test_websocket.py
project-tab/adapter-shim/openai/tests/fixtures/: codex_session.ndjson
(+466 files in other folders)
